edited the package file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://raajveerk.github.io/TheTerraceApp",
+  "homepage": "http://raajveerk.github.io/whos-at-the-terrace",
   "name": "whos-at-the-terrace",
   "version": "0.1.0",
   "private": true,
