--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
+    "react-typed": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,6 +47,7 @@
   },
   "devDependencies": {
     "gh-pages": "^5.0.0",
+    "sass": "^1.58.1",
     "tailwindcss": "^3.2.6"
   }
 }
